# garmin-reader

./: .pre-commit-config.yaml  .testenv  Cargo.toml
src/: client.rs  garmin.rs  main.rs
