[package]
name = "garmin-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.8", features = ["derive"] }
dotenv = "0.15.0"
http = "1.0.0"
itertool = "0.1.0"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json", "cookies"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
